--- a/Makefile.am
+++ b/Makefile.am
@@ -70,7 +70,7 @@ endif
 COMPILED_TESTS = tests/capdump_argv tests/capinfo_zero tests/capmerge_zero
 if BUILD_TESTS
 # tests which requires cppunit
-COMPILED_TESTS += tests/filter_argv tests/address tests/endian tests/packet tests/stream tests/timepico
+COMPILED_TESTS += tests/filter_argv tests/address tests/endian tests/hexdump tests/packet tests/stream tests/timepico
 endif
 
 check_PROGRAMS = ${COMPILED_TESTS}
@@ -231,6 +231,11 @@ tests_endian_CXXFLAGS = ${AM_CFLAGS} $(CPPUNIT_CFLAGS) -I${top_srcdir}/fallback
 tests_endian_LDFLAGS = $(CPPUNIT_LIBS)
 tests_endian_LDADD = libcap_utils-07.la libcap_filter-07.la
 tests_endian_SOURCES = tests/endian.cpp fallback/be64toh.c
+
+tests_hexdump_CXXFLAGS = ${AM_CFLAGS} $(CPPUNIT_CFLAGS)
+tests_hexdump_LDFLAGS = $(CPPUNIT_LIBS)
+tests_hexdump_LDADD = libcap_utils-07.la libcap_filter-07.la
+tests_hexdump_SOURCES = tests/hexdump.cpp tests/common.cpp src/log.c
 
 tests_packet_CXXFLAGS = ${AM_CFLAGS} $(CPPUNIT_CFLAGS) -DDATA_FILENAME=\"tests/http.packet\" -DDATA_SIZE=541
 tests_packet_LDFLAGS = $(CPPUNIT_LIBS)
