--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "git+https://github.com/DPMI/libcap_utils.git"
   },
   "author": "David Sveningsson <ext-github@sidvind.com>",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/DPMI/libcap_utils/issues"
   },
@@ -27,6 +27,7 @@
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-html2js": "^0.3.5",
     "grunt-sass": "^1.1.0"
   }
 }
