--- a/Makefile.am
+++ b/Makefile.am
@@ -143,6 +143,7 @@ libcap_utils_07_la_SOURCES = \
 	src/protocols/ipv6.c       \
 	src/protocols/mpls.c       \
 	src/protocols/ospf.c       \
+	src/protocols/vrrp.c       \
 	src/protocols/ptpv2.c	     \
 	src/protocols/sctp.c	     \
 	src/protocols/tcp.c        \
