Large fix. - Update to work with newer version of autotools. - Added support for LLDP

--- a/Makefile.am
+++ b/Makefile.am
@@ -145,6 +145,7 @@ libcap_utils_07_la_SOURCES = \
 	src/protocols/mpls.c       \
 	src/protocols/ospf.c       \
 	src/protocols/vrrp.c       \
+	src/protocols/lldp.c       \
 	src/protocols/ptpv2.c	     \
 	src/protocols/sctp.c	     \
 	src/protocols/tcp.c        \
